# UNI

./: README.md
1st Semester/IICT LAB/LAB REPORT 9/: LabReport8FlowChartsTask1.vsdx  LabReport8FlowChartsTask2.vsdx
1st Semester/IICT_Programs/: Drawing1.vsdx
1st Semester/IICT_Programs/All_prime_numbers_in_reverse_order/: All_prime_numbers_in_reverse_order.cpp  All_prime_numbers_in_reverse_order.sln  All_prime_numbers_in_reverse_order.vcxproj  All_prime_numbers_in_reverse_order.vcxproj.filters
1st Semester/PF_LAB/1SemesterProject/: 1SemesterProject.cpp  1SemesterProject.sln  1SemesterProject.vcxproj  1SemesterProject.vcxproj.filters  FlowChart.rar  PhoneBook.txt
1st Semester/PF_LAB/FlowChart/: AddEntery.vsdx  Delete.vsdx  Load.vsdx  (+3 more)
2nd Semester/DLD_LAB/: Lab Report Format.docx  Project Proposal(1).docx  Project Proposal(2).docx
2nd Semester/Ethics/: Assignment 2(AbdulAhad).docx  Assignment 2(Afzal).docx  Assignment 2.docx  format.docx
2nd Semester/OOP_LAB/: OOP Lab Report format.docx  parsecalculator.cpp
3rd Semester/ME/: format.docx
3rdSemester/DSA/: format.docx
3rdSemester/SE/: format.docx
4thSemester/Arabic/: الحوار اول تا السادس لیکچر ۱.pptx  لیکچر ۳.pptx  لیکچر5 -.pptx  لیکچر6.pptx  لیکچر۴.pptx
4thSemester/IR/: CHINA TAIWAN ISSUE.pptx  INTRODUCTION- Geographic regions of the world.pptx  International Relations Course Outline CS.docx  NATIONAL POWER.pptx
4thSemester/QT/: worship عبادات چہارم.docx  عبادات کلاس پنجم.docx  کلاس ششم عبادات.docx  کلاس ہفتم عبادات.docx
Assignments/Professional Values and Ethics/: Assignemnt 1.docx
Assignments/Projects/OOP/ProjectQT/: CMakeLists.txt  mainwindow.cpp  phonebook.cpp
Sites/: Wolframalpha(free).txt
Template/: Template.docx
(+496 files in other folders)
